# Pong_SDL2

./: CMakeLists.txt  README.md
lib/game/: game.cpp  game.h
src/: main.cpp
